# LRSchedulerAnalysis

./: .gitignore  .gitmodules  README.md
project/: README.md  baseline_experiments.ipynb  experiment_analysis.ipynb  lr_playground.ipynb  place_holder.ipynb  pyproject.toml  standard_plots.ipynb
project/experiments/: __init__.py  hub.py
project/experiments/dataset/: pl_data_module.py  utils.py
project/experiments/model/: __init__.py  cnn.py  layers.py  pl_module.py  vit.py
project/experiments/trainer/: train.py
project/figs/: matplotlibrc
project/results/: zipping.ipynb
slides/: bibliography.bib  latexmkrc  slides.tex
