[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Robin Uhrich <robin.uhrich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.0"
torchvision = "^0.18.0"
tabulate = "^0.9.0"
pytorch-lightning = "^2.2.4"
lightning = "^2.2.4"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
tensorboard = "^2.16.2"
rich = "^13.7.1"
ipywidgets = "^8.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
